--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 1.4.19
+--------------
+o Update plotCorHeatmap
+o Update reSetPeaksData
+
 Version 0.1.0
 --------------
 o First release version
